--- a/apps.json
+++ b/apps.json
@@ -6,8 +6,8 @@
   "subtitle": "Alex YTLitePlus Altstore source.",
   "description": "This is Alex's Altstore source for YTLitePlus.\n\nYTLitePlus is an enhanced Youtube app that offers a superior Youtube experience, combining YTLite (by @dayanch96) with numerous other tweaks.\n\nFor full details on what's included, check the GitHub repository:\n\nhttps://github.com/alextay-ideagen/YTLite",
   "tintColor": "e22a41",
-  "iconURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/Youtube_logo-512.png",
-  "headerURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/screenshots/header/altstore_header.png",
+  "iconURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/Youtube_logo-512.png?raw=true",
+  "headerURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/screenshots/header/altstore_header.png?raw=true",
   "apps": [
     {
       "beta": false,
@@ -20,7 +20,7 @@
       "versionDescription": "• Updated YouTube to v20.15.1\n • YTLitePlus is using 5.0.1\n • iOS/iPadOS 15.0 or later required\n\nFeatures included:\n • YTLite core features\n • YTUHD for higher resolutions\n • YouPiP for Picture-in-Picture\n • YTABConfig for A/B settings\n • YouMute for audio control\n • DontEatMyContent for notch/Dynamic Island\n • Return YouTube Dislikes\n • iSponsorBlock for skipping sponsors\n • YouRememberCaption for captions\n • YTNoTracking for privacy\n • YTUnShorts for better Shorts experience\n • YTNoCheckLocalNetwork\n • BigYTMiniPlayer\n • YTSpeed and YTHoldForSpeed\n • YTVideoOverlay\n • YouQuality for quality control\n • YTNoModernUI\n • OLEDDarkmode and OLDDarkmode\n • LowContrastMode\n • YTNoSuggestedVideo\n\nCredits to all contributors and developers",
       "downloadURL": "https://github.com/alextay-ideagen/YTLite/releases/download/untagged-31685729bf85db5c5f49/YouTubePlus_5.2b1.ipa",
       "localizedDescription": "YTLite with more features!\n\nYTLitePlus is an enhanced Youtube app that offers a superior Youtube experience, combining YTLite (by @dayanch96) with numerous other tweaks :\n\n\u2022 YTLite\n\u2022 YTUHD\n\u2022 YouPiP\n\u2022 YTABConfig\n\u2022 YouMute\n\u2022 DontEatMyContent\n\u2022 Return YouTube Dislikes\n\u2022 iSponsorBlock\n\u2022 YouRememberCaption\n\u2022 YTNoTracking\n\u2022 YTUnShorts\n\u2022 YTNoCheckLocalNetwork\n\u2022 BigYTMiniPlayer\n\u2022 YTSpeed\n\u2022 YTHoldForSpeed\n\u2022 YTVideoOverlay\n\u2022 YouQuality\n\u2022 YTNoModernUI\n\u2022 OLEDDarkmode\n\u2022 OLDDarkmode\n\u2022 LowContrastMode\n\u2022 YTNoSuggestedVideo\n\nCredit\n\n@Balackburn, @bhackel, @Deci8BelioS, @matt911, @arichornloverALT, @Macleykun, @AlexInABox, @SKEIDs, @VictorxD70, @Glenta, @zSaaiq, @MrAlucardDante, @gototheskinny, @asdfzxcvbn, @dayanch96, @ssuesskind, @MiRO92, @qnblackcat, @PoomSmart, @level3tjg, @BandarHL, @Galactic-Dev, @julioverne, @hbang, @Lyvendia, @therealFoxster, @ichitaso, @AhmedBafkir, @CokePokes, @ISnackable",
-      "iconURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/Youtube_logo-512.png",
+      "iconURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/Youtube_logo-512.png?raw=true",
       "tintColor": "e81e8a",
       "category": "social",
       "size": 114294784,
@@ -93,7 +93,7 @@
       "caption": "Update of YTLitePlus just got released!",
       "date": "2025-04-25",
       "identifier": "release-20.15.1-5.0.1",
-      "imageURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/screenshots/news/new_release.png",
+      "imageURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/screenshots/news/new_release.png?raw=true",
       "notify": true,
       "tintColor": "e22a41",
       "title": "20.15.1-5.0.1 - YTLitePlus 25/04/25",
@@ -104,7 +104,7 @@
       "caption": "Update of YTLitePlus just got released!",
       "date": "2024-08-14",
       "identifier": "release-20.02.3-4.0.1",
-      "imageURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/screenshots/news/new_release.png",
+      "imageURL": "https://raw.githubusercontent.com/YTLitePlus/YTLitePlus-Altstore/main/screenshots/news/new_release.png?raw=true",
       "notify": true,
       "tintColor": "e22a41",
       "title": "20.02.3-4.0.1 - YTLitePlus 14/08/24",
